--- a/leetCode.html
+++ b/leetCode.html
@@ -46,18 +46,71 @@ const makeTree = (arr)=>{
     return head;
 }
 
-var firstUniqChar = function(s) {
-    const cache = [];
-    for(let i = 0, len = s.length; i<len; i++) {
-        let ch = s[i];
-        if(!cache[ch] && s.lastIndexOf(ch)==i) {
-            return i;
-        }else {
-            cache[ch] = 1;
+//求所有组合
+var getCom = function(len, numOfOne) {
+    let result = [];
+    if(len<=1) {
+        result.push(numOfOne>0?"1":"0");
+    }else if(numOfOne<=0) {
+        result.push(Array(len+1).join("0"));
+    }else if(len<=numOfOne) {
+        result.push(Array(numOfOne+1).join("1"));
+    }else {
+        result = result.concat(getCom(len-1, numOfOne-1).map(v=>"1"+v));
+        result = result.concat(getCom(len-1, numOfOne).map(v=>"0"+v));
+    }
+    return result;
+};
+
+/**
+ * @param {number} num
+ * @return {string}
+ */
+var toHex = function(num) {
+    //先转成二进制
+    let n = Math.abs(num);
+    let twoArr = [];
+    while(n>=1) {
+        twoArr.unshift(n%2);
+        n = ~~(n/2);
+    }
+
+    twoArr = Array(33).join("0").split("").concat(twoArr).slice(-32);
+    
+    //如果是负数，求补码
+    if(num<0) {
+        twoArr = twoArr.map(v=>v==0?1:0);
+        let i = 31;
+        let carry = 1;
+        while(i>=0) {
+            if(twoArr[i] && carry) {
+                twoArr[i] = 0;
+                carry = 1;
+            }else {
+                if(carry) {
+                    twoArr[i] = 1;
+                }
+                break;
+            }
+            i--;
         }
     }
-    return -1;
+
+    let hexArr = [];
+    while(twoArr.length) {
+        let digit = parseInt(twoArr.slice(0, 4).join(""), 2);
+        twoArr = twoArr.slice(4);
+        if(digit>9) {
+            digit = String.fromCharCode('a'.charCodeAt(0)+digit-10);
+        }
+        hexArr.push(digit);
+    }
+
+    let result = hexArr.join("").replace(/^0+/, "");
+    return result || "0";
 };
-console.log(firstUniqChar('cc'));
+
+
+//console.log(toHex(1));
 </script>
 </body>
