--- a/leetCode.html
+++ b/leetCode.html
@@ -62,28 +62,60 @@ var getCom = function(len, numOfOne) {
     return result;
 };
 
-/**
- * @param {number} n
- * @return {string[]}
- */
- var addStrings = function(num1, num2) {
-    num1 = Array.from(num1).reverse();
-    num2 = Array.from(num2).reverse();
-    let carry = 0;
-    let result = [];
-    for(let i = 0, len = Math.max(num1.length, num2.length); i<len; i++) {
-        let cur = parseInt('0'+num1[i]) + parseInt('0'+num2[i]) + carry;
-        if(cur>9) {
-            cur = cur % 10;
-            carry = 1;
-        }else {
-            carry = 0;
-        }
-        result.push(cur);
-    }
-    return (carry?"1":"") + result.reverse().join("");
+function Node(val,isLeaf,topLeft,topRight,bottomLeft,bottomRight) {
+    this.val = val;
+    this.isLeaf = isLeaf;
+    this.topLeft = topLeft;
+    this.topRight = topRight;
+    this.bottomLeft = bottomLeft;
+    this.bottomRight = bottomRight;
 };
 
-console.log(addStrings('0', '0'));
+//我们假设传过来的肯定都是n*n的格子
+const isLeaf = function(grid) {
+    let first = grid[0][0];
+    for(let row of grid) {
+        for(let col of row) {
+            if(col!=first) {
+                return [false];
+            }
+        }
+    }
+
+    return [true, !!first];
+};
+
+const sliceGrip = function(grid, rowStart, rowEnd, colStart, colEnd) {
+    let result = [];
+    for(let i = rowStart; i<rowEnd; i++) {
+        result.push(grid[i].slice(colStart, colEnd));
+    }
+
+    return result;
+}
+
+/**
+ * @param {number[][]} grid
+ * @return {Node}
+ */
+ var construct = function(grid) {
+    const [_isLeaf, val] = isLeaf(grid);
+    const root = new Node(val, _isLeaf);
+    if(_isLeaf) {
+        return root;
+    }
+
+    const rowCount = grid.length;
+    const colCount = grid[0].length;
+    root.topLeft = construct(sliceGrip(grid, 0, rowCount/2, 0, colCount/2));
+    root.topRight = construct(sliceGrip(grid, 0, rowCount/2, colCount/2, colCount));
+    root.bottomLeft = construct(sliceGrip(grid, rowCount/2, rowCount, 0, colCount/2));
+    root.bottomRight = construct(sliceGrip(grid, rowCount/2, rowCount, colCount/2, colCount));
+
+    return root;
+};
+
+const grid = [[1,1,1,1,0,0,0,0],[1,1,1,1,0,0,0,0],[1,1,1,1,1,1,1,1],[1,1,1,1,1,1,1,1],[1,1,1,1,0,0,0,0],[1,1,1,1,0,0,0,0],[1,1,1,1,0,0,0,0],[1,1,1,1,0,0,0,0]];
+console.log(construct(grid));
 </script>
 </body>
