--- a/leetCode.html
+++ b/leetCode.html
@@ -106,29 +106,33 @@ const isAnagrams = function(aStr, bStr) {
 };
 
 /**
- * @param {number[][]} points
- * @return {number}
+ * @param {number[]} nums
+ * @return {number[]}
  */
-var numberOfBoomerangs = function(points) {
-    let count = 0;
-    for(let i = 0, len = points.length; i<len; i++) {
-        const cache = {};//注意cache初始化的位置
-        for(let j = 0; j<len; j++) {
-            if(i==j) {
-                continue;
+var findDisappearedNumbers = function(nums) {
+    for(let i = 0, len = nums.length; i<len; i++) {
+        while(true) {//索引不正确
+            let swapIndex = nums[i]-1;
+            if(nums[swapIndex]==swapIndex+1) {//要换的地方已经正确
+                break;
             }
-            const dist = Math.pow((points[i][0]-points[j][0]), 2) + Math.pow((points[i][0]-points[j][0]), 2);
-            if(cache[dist]) {
-                count += cache[dist] * 2;
-            }
-            cache[dist] = (cache[dist] || 0) + 1;
+            let tmp = nums[swapIndex];
+            nums[swapIndex] = nums[i];
+            nums[i] = tmp;
         }
     }
 
-    return count;
+    let result = [];
+    for(let i = 0, len = nums.length; i<len; i++) {
+        if(nums[i]!=i+1) {
+            result.push(i+1);
+        }
+    }
+
+    return result;
 };
 
-const arr = [[0,0],[1,0],[2,0]];
-console.log(numberOfBoomerangs(arr));
+const arr = [4,3,2,7,8,2,3,1];
+//console.log(findDisappearedNumbers(arr));
 </script>
 </body>
