--- a/leetCode.html
+++ b/leetCode.html
@@ -101,23 +101,45 @@ const getComplement = function(num, bit=32) {
     return x;
 };
 
-var hammingDistance = function(x, y) {
-    let xCom = x.toString(2);
-    let yCom = y.toString(2);
-    let maxLength = Math.max(xCom.length, yCom.length);
-    xCom = (new Array(maxLength).join("0") + xCom).slice(-maxLength);
-    yCom = (new Array(maxLength).join("0") + yCom).slice(-maxLength);
+/**
+ * @param {number[][]} grid
+ * @return {number}
+ */
+var islandPerimeter = function(grid) {
     let count = 0;
-    for(let i = 0, len = Math.min(xCom.length, yCom.length); i<len; i++) {
-        if(xCom[i]!==yCom[i]) {
-            count++;
+    for(let i = 0, iLen = grid.length; i<iLen; i++) {
+        for(let j = 0, jLen = grid[i].length; j<jLen; j++) {
+            if(grid[i][j]==0) {
+                continue;
+            }
+
+            //top
+            if(i-1<0 || grid[i-1][j]==0) {
+                count++;
+            }
+            //right
+            if(j+1>=jLen || grid[i][j+1]==0) {
+                count++;
+            }
+            //bottom
+            if(i+1>=iLen || grid[i+1][j]==0) {
+                count++;
+            }
+            //left
+            if(j-1<0 || grid[i][j-1]==0) {
+                count++;
+            }
         }
     }
 
     return count;
 };
 
-const arr = [1, 2, 3];
-console.log(hammingDistance(1, 4));
+
+const arr = [[0,0,0,0],
+ [1,0,0,0],
+ [0,0,0,0],
+ [0,0,0,0]];
+console.log(islandPerimeter(arr));
 </script>
 </body>
