--- a/leetCode.html
+++ b/leetCode.html
@@ -101,23 +101,52 @@ const getComplement = function(num, bit=32) {
     return x;
 };
 
-/**
- * @param {string} S
- * @param {number} K
- * @return {string}
- */
-var licenseKeyFormatting = function(S, K) {
-    S = S.replace(/\-/g, "").toUpperCase();
-    let result = [];
-    let length = S.length;
-    while(length>0) {
-        result.unshift(S.substring(length-K, length));//注意这里不能用slice，substring的第一个参数为负数的时候会从0开始取，但是slice不是
-        length -= K;
+const deconstructToPrimie = (num)=>{
+    const result = [];
+    let cursor = 2;
+    while(num>1) {
+        if(num%cursor==0) {
+            result.push(cursor);
+            num /= cursor;
+        }else {
+            cursor++;
+        }
     }
-    return result.join("-");
+
+    return result;
 };
 
-console.log(licenseKeyFormatting("2-5g-3-J", 2));
+const isPrime = (num)=>{
+    let cursor = 2;
+    const sqrt = ~~Math.sqrt(num);
+    while(num>1 && cursor<=sqrt) {
+        if(num%cursor==0) {
+            return false;
+        }
+        cursor++;
+    }
+
+    return true;
+};
+
+/**
+ * @param {number} area
+ * @return {number[]}
+ */
+var constructRectangle = function(area) {
+    let sqrt = ~~Math.sqrt(area);
+    let cursor = sqrt;
+    while(cursor>=1) {
+        if(area%cursor==0) {
+            return [cursor, area/cursor].sort((a,b)=>b-a);
+        }
+        cursor--;
+    }
+
+    return [area, 1];
+};
+
+console.log(constructRectangle(10000000));
 
 </script>
 </body>
