--- a/leetCode.html
+++ b/leetCode.html
@@ -129,42 +129,31 @@ const isPrime = (num)=>{
     return true;
 };
 
-/**
- * @param {number[]} nums
- * @return {string[]}
- */
-var findRelativeRanks = function(nums) {
-    const rankDesMap = {};
-    let rank = 0;
-    let tNums = [].concat(nums);
-    tNums.sort((a,b)=>{return b-a});
-    for(let i = 0, len = tNums.length; i<len; i++) {
-        let rankDes = "";
-        switch(++rank) {
-            case 1:
-                rankDes = "Gold Medal";
-                break;
-            case 2:
-                rankDes = "Silver Medal";
-                break;
-            case 3:
-                rankDes = "Bronze Medal";
-                break;
-            default:
-                rankDes = ""+rank;
-                break;
+const getDivisors = function(num) {
+    const result = {};
+    for(let i = 1, max = ~~Math.sqrt(num); i<=max; i++) {
+        let another = ~~(num/i);
+        if(i*another==num) {
+            result[i] = 1;
+            result[another] = 1;
         }
-        rankDesMap[tNums[i]] = rankDes;
     }
-    
-    const result = [];
-    for(let num of nums) {
-        result.push(rankDesMap[num]);
-    }
-    return result;
+
+    return Object.keys(result);
 };
 
-console.log(findRelativeRanks([10,3,8,9,4]));
+/**
+ * @param {number} num
+ * @return {boolean}
+ */
+var checkPerfectNumber = function(num) {
+    if(num<=0) {
+        return false;
+    }
+    return getDivisors(num).filter((a)=>num!=a).reduce((a, b)=>parseInt(a)+parseInt(b), 0) == num;
+};
+
+console.log(checkPerfectNumber(-28));
 
 </script>
 </body>
